// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballStandings should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa giUBsz"
  >
    <div
      class="sc-htpNat sc-bxivhb kQLOGL"
    />
    <div
      class="sc-bwzfXH kVYHKf"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballStandings should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hGXeaj"
  >
    <div
      class="sc-htpNat sc-bxivhb kQLOGL"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
